--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -3,7 +3,7 @@
 .header {
   background: linear-gradient(to right, #383d43, #31353b);
   height: fit-content;
-  padding: 1.5rem 4rem;
+  padding: 1.5rem 5%;
   position: relative;
   border-radius: 1em;
 }
@@ -214,4 +214,34 @@
   a:last-child {
     padding-left: 1em;
   }
+}
+
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  transition: .3s;
+  visibility: hidden;
+  //width: 120px;
+  background-color: #444;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  font-size: 1em;
+  padding: .3em 1em;
+
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+  right: 2em;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
