--- a/src/components/main-list/desires-list.module.scss
+++ b/src/components/main-list/desires-list.module.scss
@@ -142,17 +142,34 @@
     img {
       width: 1.5em;
     }
+    svg {
+      color: #ffffff;
+      font-size: 1.4em;
+    }
   }
   .menu {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
+    padding-right: 0;
     i {
       display: inline-block;
       width: 5px;
       height: 5px;
       background-color: #ffffff;
       border-radius: 50%;
+      transition: .3s;
+    }
+    &.activeToast {
+      i {
+        transition: .3s;
+        &:nth-child(1) {
+          transform: translate(15px, -10px);
+        }
+        &:nth-child(3) {
+          transform: translate(-15px, 10px);
+        }
+      }
     }
   }
 }
@@ -160,12 +177,22 @@
   width: 100%;
   height: 20em;
   overflow: hidden;
-  display: grid;
-  justify-items: center;
+  //display: flex;
+  //justify-items: center;
   //justify-content: center;
-  align-items: center;
+  //align-items: center;
+  position: relative;
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    //width: auto;
+    height: 100%;
+  }
 }
 .card_info {
+  width: 100%;
   position: relative;
   padding: 0 1em 1em 1em;
   display: grid;
