--- a/src/components/main-list/offers-list.module.scss
+++ b/src/components/main-list/offers-list.module.scss
@@ -1,183 +1,212 @@
 .main_list {
-	padding-top: 1em;
-	ul {
-		padding: 0;
-		list-style: none;
-		display: grid;
-		grid-template-columns: 24% 24% 24% 24%;
-		grid-column-gap: 1.3%;
-		grid-row-gap: 1em;
-		@media screen and (max-width: 768px) {
-			grid-template-columns: 1fr;
-		}
-	}
+  padding-top: 1em;
+  ul {
+    padding: 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: 24% 24% 24% 24%;
+    grid-column-gap: 1.3%;
+    grid-row-gap: 1em;
+    @media screen and (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
+  }
 }
 
 .main_list {
-	padding-top: 1em;
-	ul {
-		padding: 0;
-		list-style: none;
-		display: grid;
-		grid-template-columns: 24% 24% 24% 24%;
-		grid-column-gap: 1.3%;
-		grid-row-gap: 2em;
-		@media screen and (max-width: 768px) {
-			grid-template-columns: 1fr;
-		}
-	}
+  padding-top: 1em;
+  ul {
+    padding: 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: 24% 24% 24% 24%;
+    grid-column-gap: 1.3%;
+    grid-row-gap: 2em;
+    @media screen and (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
+  }
 }
 
 // lot
 .card {
-	color: #383b42;
-	position: relative;
-	//height: 27em;
-	border-radius: 1em;
-	background-color: #3a3f46;
-	display: grid;
-	grid-template-rows: 3fr 1fr;
-	overflow: hidden;
-	position: relative;
+  color: #383b42;
+  position: relative;
+  //height: 27em;
+  border-radius: 1em;
+  background-color: #3a3f46;
+  display: grid;
+  grid-template-rows: 3fr 1fr;
+  overflow: hidden;
+  position: relative;
 }
 .card_header {
-	position: relative;
+  position: relative;
 }
 .card_header_control {
-	background-color: #3a3f46;
-	z-index: 5;
-	width: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: grid;
-	grid-auto-flow: column;
-	align-items: center;
-	align-content: center;
-	justify-content: space-between;
-	span {
-		cursor: pointer;
-		padding: 0.6em 1em;
-		img {
-			width: 1.5em;
-		}
-	}
-	.menu {
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
-		gap: 10px;
-		i {
-			display: inline-block;
-			width: 5px;
-			height: 5px;
-			background-color: #ffffff;
-			border-radius: 50%;
-		}
-	}
+  background-color: #3a3f46;
+  z-index: 5;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
+  span {
+    cursor: pointer;
+    padding: 0.6em 1em;
+    img {
+      width: 1.5em;
+    }
+    svg {
+      color: #fff;
+      font-size: 1.4em;
+    }
+  }
+  .menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+    padding-right: 0;
+    i {
+      display: inline-block;
+      width: 5px;
+      height: 5px;
+      background-color: #ffffff;
+      border-radius: 50%;
+      transition: 0.3s;
+    }
+    &.activeToast {
+      i {
+        transition: 0.3s;
+
+        &:nth-child(1) {
+          transform: translate(15px, -10px);
+        }
+
+        &:nth-child(3) {
+          transform: translate(-15px, 10px);
+        }
+      }
+    }
+  }
 }
 .lot_img_holder {
-	width: 100%;
-	height: 20em;
-	overflow: hidden;
-	display: grid;
-	justify-items: center;
-	//justify-content: center;
-	align-items: center;
+  width: 100%;
+  height: 20em;
+  overflow: hidden;
+  //display: flex;
+  //justify-items: center;
+  //justify-content: center;
+  //align-items: center;
+  position: relative;
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    //width: auto;
+    height: 100%;
+  }
 }
 .card_info {
-	position: relative;
-	padding: 0 1em 1em 1em;
-	display: grid;
-	height: 7em;
-	background-color: #3a3f46;
-	h5 {
-		width: 75%;
-		height: 2em;
-		a {
-			color: #ffffff;
-			font-family: 'Montserrat', sans-serif;
-			font-size: 17px;
-			font-weight: 700;
-		}
-	}
+  position: relative;
+  padding: 0 1em 1em 1em;
+  display: grid;
+  height: 7em;
+  background-color: #3a3f46;
+  h5 {
+    width: 75%;
+    height: 2em;
+    a {
+      color: #ffffff;
+      font-family: "Montserrat", sans-serif;
+      font-size: 17px;
+      font-weight: 700;
+    }
+  }
 }
 .card_price {
-	white-space: nowrap;
-	color: #ffffff;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 21px;
-	font-weight: 700;
-	span {
-		font-size: 29px;
-	}
+  white-space: nowrap;
+  color: #ffffff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 21px;
+  font-weight: 700;
+  span {
+    font-size: 29px;
+  }
 }
 
 .progress_bar {
-	display: grid;
-	grid-template-columns: 5fr 1fr;
-	width: 100%;
-	align-items: center;
-	div {
-		background: none;
-		height: 7px;
-		div {
-			height: 7px;
-			background-color: #c78550;
-		}
-	}
-	span {
-		color: #c78550;
-		font-family: 'Montserrat', sans-serif;
-		font-size: 22px;
-		font-weight: 700;
-		padding-left: .5em;
-	}
+  display: grid;
+  grid-template-columns: 5fr 1fr;
+  width: 100%;
+  align-items: center;
+  div {
+    background: none;
+    height: 7px;
+    div {
+      height: 7px;
+      background-color: #c78550;
+    }
+  }
+  span {
+    color: #c78550;
+    font-family: "Montserrat", sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    padding-left: 0.5em;
+  }
 }
 
 .card_elipse {
-	position: absolute;
-	top: 0;
-	right: 1em;
-	width: 4.3em;
-	height: 4.3em;
-	background-color: #383b42;
-	border-radius: 50%;
-	transform: translateY(-3em);
-	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  position: absolute;
+  top: 0;
+  right: 1em;
+  width: 4.3em;
+  height: 4.3em;
+  background-color: #383b42;
+  border-radius: 50%;
+  transform: translateY(-3em);
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .toast {
-	position: absolute;
-	top: 0.5em;
-	left: 50%;
-	padding: .5em;
-	transform: translateX(-40%);
-	z-index: 10;
-	background-color: #fff;
-	border-radius: 0.3em;
-	border: 1px solid #ccc;
-	display: grid;
-	box-shadow: 0 0 10px 2px rgba(53, 53, 53, 0.27);
-	span, button, a {
-		text-align: center;
-		text-decoration: none;
-		color: #000;
-		background-color: #fff;
-		border: none;
-		border-bottom: 1px solid #eee;
-		padding: 0.1em 0.5em;
-		border-radius: 0;
-		&:hover {
-			border-radius: 0;
-			color: #000;
-			border: none;
-			border-bottom: 1px solid #999;
-			transition: 0.3s;
-			background-color: #fafafa;
-		}
-	}
+  position: absolute;
+  top: 0.5em;
+  left: 50%;
+  padding: 0.5em;
+  transform: translateX(-40%);
+  z-index: 10;
+  background-color: #fff;
+  border-radius: 0.3em;
+  border: 1px solid #ccc;
+  display: grid;
+  box-shadow: 0 0 10px 2px rgba(53, 53, 53, 0.27);
+  span,
+  button,
+  a {
+    text-align: center;
+    text-decoration: none;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-bottom: 1px solid #eee;
+    padding: 0.1em 0.5em;
+    border-radius: 0;
+    &:hover {
+      border-radius: 0;
+      color: #000;
+      border: none;
+      border-bottom: 1px solid #999;
+      transition: 0.3s;
+      background-color: #fafafa;
+    }
+  }
 }
-
