--- a/src/components/my-desires/my-desire.module.scss
+++ b/src/components/my-desires/my-desire.module.scss
@@ -1,211 +1,295 @@
+.my_desires_page {
+  border-radius: 1em;
+  background: linear-gradient(to right, #373b42, #2e3137);
+  padding: 3rem 5%;
+  font-family: "Montserrat", sans-serif;
+}
+
 .red_list {
-	display: grid;
-	grid-gap: 1em;
+  display: grid;
+  grid-gap: 1em;
 }
 .desires_list_heading {
-	background-color: #fff;
-	font-size: 1.8em;
-	text-align: center;
-	padding: 1.2em 1em;
-	font-weight: 700;
-	@media screen and (max-width: 768px) {
-		font-size: 1.3em;
-	}
+  background-color: #fff;
+  font-size: 1.8em;
+  text-align: center;
+  padding: 1.2em 1em;
+  font-weight: 700;
+  @media screen and (max-width: 768px) {
+    font-size: 1.3em;
+  }
 }
-.red_list_control {
-	background-color: #fff;
-	padding: 0.5em 2em;
-	display: flex;
-	justify-content: space-between;
-	span {
-		border: 1px solid #000;
-		font-size: 1.4em;
-		font-weight: 700;
-		padding: 0.2em 4em 0.2em 2em;
-		a {
-			white-space: nowrap;
-		}
-	}
-	@media screen and (max-width: 768px) {
-		display: grid;
-		gap: .5em;
-	}
+.desires_list_sort {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding-bottom: 2em;
+  .create_btn {
+    border-radius: 1em 0 1em 0;
+    background-image: linear-gradient(to top, #c78550 0%, #f5c99e 100%);
+    a {
+      color: #22262a;
+      font-family: "Montserrat", sans-serif;
+      text-decoration: none;
+      font-size: 21px;
+      font-weight: 700;
+      padding: 0.6em 2.5em;
+      display: inline-block;
+    }
+  }
+  .sort_select {
+    display: flex;
+    align-items: center;
+    .sort_title,
+    select {
+      color: #ffffff;
+      font-family: "Montserrat", sans-serif;
+      font-size: 21px;
+      font-weight: 400;
+      .select_arrow {
+        margin: 0 0.6em 0 1.2em;
+        font-weight: bold;
+      }
+    }
+    select {
+      background: none;
+      padding: 0.5em 1em;
+      border: none;
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      cursor: pointer;
+      background: linear-gradient(to right, #31343b, #2e3137);
+      option {
+        background: linear-gradient(to right, #373b42, #2e3137);
+      }
+      &:focus {
+        outline: none;
+      }
+    }
+  }
 }
+
 .red_list_items {
-	ul {
-		padding: 0;
-		list-style: none;
-		display: grid;
-		grid-gap: 2em;
-		li {
-			background-color: #fff;
-		}
-	}
+  ul {
+    padding: 0;
+    list-style: none;
+    display: grid;
+    gap: 3em;
+  }
 }
 
 .card {
-	color: #383b42;
-	display: grid;
-	grid-template-columns: 35% 45% 20%;
-	overflow: hidden;
-	@media screen and (max-width: 768px) {
-		grid-template-columns: 1fr;
-	}
+  border-radius: 1em;
+  background-color: #3a3f46;
+  color: #383b42;
+  display: grid;
+  grid-template-columns: 38% 42% 20%;
+  overflow: hidden;
 }
+
 .card_image {
-	background-color: #d75359;
-	grid-column: span 1;
-	display: grid;
-	position: relative;
-	//justify-content: center;
-	align-items: center;
-	overflow: hidden;
-	height: 20em;
-	@media screen and (max-width: 768px) {
-		grid-column: span 1;
-	}
-	img {
-		//max-height: 20em;
-	}
+  grid-row: span 2;
+  position: relative;
+  overflow: hidden;
+  height: 22em;
+  border-radius: 1em;
+
+  img {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .placeholder {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
+
 .card_info_block {
-	padding: 1em;
-	display: grid;
-	align-content: center;
-	h5 {
-		font-size: 1.3em;
-		font-weight: 700;
-		padding: 0.5em 0;
-		a {
-			color: #000;
-		}
-	}
-	p {
-		font-size: 1em;
-		font-weight: 400;
-		line-height: 1.2em;
-		margin-bottom: 1.8em;
-	}
+  padding: 1.3em 1.5em 1em 1.5em;
+  color: #ffffff;
+  display: grid;
+  align-content: space-between;
+  h5 a {
+    color: #ffffff;
+    font-family: "Montserrat", sans-serif;
+    text-decoration: none;
+    font-size: 17px;
+    font-weight: 700;
+  }
+  p {
+    height: 7em;
+    overflow: hidden;
+    position: relative;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 1.4em;
+    &:after {
+      content: '';
+      background: linear-gradient(to top, #3a3f46, transparent);
+      width: 100%;
+      height: 3em;
+      display: block;
+      position: absolute;
+      bottom: -2px;
+    }
+  }
+  .user_block {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+    .elips {
+      grid-row: span 2;
+      width: 4.5em;
+      height: 4.5em;
+      border-radius: 50%;
+      border: 3px solid #c78550;
+      position: relative;
+      overflow: hidden;
+      img {
+        height: 100%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+    .user_name {
+      color: #ffffff;
+      font-family: "Montserrat", sans-serif;
+      font-size: 17px;
+      font-weight: 700;
+    }
+    .location {
+      svg {
+        font-size: 1.3em;
+        color: #fff;
+        margin-right: .5em;
+      }
+    }
+  }
 }
-.card_info_block_footer {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-gap: 0.7em;
-	div {
-		display: flex;
-		align-content: center;
-		span {
-			font-size: 0.9em;
-			font-weight: 700;
-		}
-		img {
-		}
-	}
-}
-.location_img {
-	height: 1.2em;
-	width: 0.9em;
-	margin-right: 0.5em;
-}
-.stars_img {
-	height: 0.9em;
-}
-.elips {
-	display: inline-block;
-	width: 1.8em;
-	height: 1.8em;
-	background-color: #383b42;
-	border-radius: 50%;
-	margin-right: 0.5em;
-}
+
 .card_control_block {
-	display: grid;
-	grid-template-rows: 1fr 1fr 1fr 1fr;
-	align-items: center;
-	justify-items: center;
-	padding: 2em 0;
-	background-color: #fbfbfb;
-	@media screen and (max-width: 768px) {
-		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 1fr 1fr;
-		padding: 0 0.5em 1em 0.5em;
-	}
+  border-radius: 1em;
+  background-color: #22262a;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  padding: 2em .7em .7em .7em;
+  display: grid;
+  //justify-content: center;
+  gap: .3em;
+  p {
+    white-space: nowrap;
+    color: #c78550;
+    font-size: 21px;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin: 0;
+  }
+  .price {
+    color: #ffffff;
+    //font-size: 34px;
+    font-weight: 700;
+    font-size: 21px;
+  }
+  .edit, .post, .delete {
+    color: #ffffff;
+    width: 100%;
+    font-size: 17px;
+    font-weight: 700;
+    border-radius: .6em;
+    background-color: #3a3f46;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .3s;
+    a {
+      width: 100%;
+      color: #ffffff;
+      text-decoration: none;
+    }
+    &:hover, &:active {
+      background-color: #292d33;
+    }
+    &.greenBtn {
+      transition: .3s;
+      background-image: linear-gradient(to top, #3c855b 0%, #3c855b 1%, #7ab972 100%);
+      &:hover {
+        background-image: linear-gradient(to top, #2b6d47 0%, #3c9d65 1%, #5aba4d 100%);
+      }
+    }
+  }
 }
-.price {
-	overflow: hidden;
-	width: 100%;
-	text-align: center;
-	font-size: 2em;
-	font-weight: 700;
-	white-space: nowrap;
-	@media screen and (max-width: 768px) {
-		grid-column: span 2;
-	}
-}
-.edit {
-	font-size: 1.3em;
-	font-weight: 700;
-	padding: 0.3em 0;
-	width: 7.5em;
-	background-color: #fff !important;
-	@media screen and (max-width: 768px) {
-		width: auto;
-		padding: 0.3em 0.5em;
-		border: 1px solid #000 !important;
-	}
-}
-.post {
-	font-size: 1.3em;
-	font-weight: 700;
-	padding: 0.3em 0;
-	width: 7.5em;
-	background-color: #fff !important;
-	@media screen and (max-width: 768px) {
-		width: auto;
-		padding: 0.3em 0.5em;
-		border: 1px solid #000 !important;
-	}
+
+.disableColor {
+  filter: grayscale(100%) !important;
 }
 
 .card_footer {
-	background-color: #737373;
-	grid-column: span 3;
-	display: flex;
-	padding-right: 1em;
-	justify-content: space-between;
-	div {
-		background-color: #8fb50c;
-		color: #fff;
-		position: relative;
-		line-height: 2em;
-		padding: 0 1em;
-		&:after {
-			content: "";
-			position: absolute;
-			top: 0;
-			right: 0;
-			transform: translate(96%, -4%);
-			border-bottom: 2em solid #8fb50c;
-			border-right: 1.5em solid transparent;
-		}
-	}
-	button {
-		border: none;
-		color: #fff;
-		background-color: #8fb50c;
-	}
-	@media screen and (max-width: 768px) {
-		grid-column: span 1;
-		display: grid;
-		grid-gap: 0.3em;
-		justify-content: center;
-		justify-items: center;
-		padding: 0.3em 1em;
-		div::after {
-			display: none;
-		}
-		button {
-			padding: 0.3em 1em;
-		}
-	}
+  grid-column: span 2;
+  background-color: #31343a;
+}
+.not_published {
+  height: calc(100% - 7px);
+  width: calc(100% - 7px);
+  transform: translate(7px, 7px);
+  border-radius: 1em;
+  padding: .6em 1em;
+  display: flex;
+  justify-content: flex-end;
+  background-color: #3a3f46;
+  align-items: center;
+  color: #ffffff;
+  font-size: 21px;
+  font-weight: 700;
+}
+.card_footer_content {
+  height: calc(100% - 7px);
+  width: calc(100% - 7px);
+  transform: translate(7px, 7px);
+  border-radius: 1em;
+  background-image: linear-gradient(to right, #7ab972 0%, #3c855b 99%, #3c855b 100%);
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  div {
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+  }
+  .views {
+    svg {
+      font-size: 1.3em;
+    }
+  }
+  .statistics {
+
+  }
+  .lots {
+
+  }
+  .offers {
+    cursor: pointer;
+    transition: .3s;
+    span {
+      font-weight: 900;
+      font-size: 1.2em;
+      line-height: 0;
+      margin-top: -.2em;
+    }
+    &:hover {
+      text-shadow: 0 0 10px rgba(255, 255, 255, .7);
+    }
+  }
 }
