--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -5,7 +5,8 @@
   min-height: 100vh;
   height: 100%;
   border-radius: 1em;
-  padding: 3rem 3rem;
+  padding: 3rem 9%;
+  overflow: hidden;
 
   @media screen and (max-width: 1024px) {
     display: none;
@@ -15,9 +16,12 @@
 .sidebar_logo {
   display: flex;
   justify-content: flex-end;
-  img {
+  a {
     width: 70%;
     max-width: 90%;
+  }
+  img {
+    width: 100%;
   }
 }
 
@@ -35,13 +39,19 @@
   border: 5px solid #c78550;
   width: 10.1em;
   padding: 0.7em;
-  margin: 0 0 0 -0.4em;
+  margin: 0 0 0 -0.8em;
   display: grid;
-  justify-items: center;
+  justify-content: center;
   align-items: center;
+  position: relative;
   img {
-    //width: 100%;
-    height: 100%;
+    //position: absolute;
+    //top: 50%;
+    //left: 50%;
+    //transform: translate(-50%, -50%);
+    height: 8em;
+    width: 8.1em;
+    //overflow: hidden;
     border-radius: 50%;
   }
 }
@@ -63,7 +73,7 @@
 
 .sidebar_component {
   background: linear-gradient(-37deg, #1e1f1e 0%, #383b42 100%);
-  min-height: 80vh;
+  //min-height: 80vh;
   height: 100%;
   display: grid;
   margin-top: -5rem;
