--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -3,7 +3,7 @@
 .header {
   background: linear-gradient(to right, #383d43, #31353b);
   height: fit-content;
-  padding: 1.5rem 5%;
+  padding: 1.5rem 4%;
   position: relative;
   border-radius: 1em;
 }
@@ -15,25 +15,76 @@
   width: 100%;
 }
 .navbar_toggler {
+  &:focus {
+    outline: none;
+  }
+}
+.sidebar_toggler {
+  position: absolute;
+  top: 0;
+  right: 10em;
+  z-index: 99;
+  border-radius: 0.3em;
+  //border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0.4em 0.8em;
+  color: rgba(255,255,255,.5);
+  border-color: rgba(255,255,255,.1);
+  background: none;
+  font-weight: 600;
+  display: none;
+  transform: translateY(15%);
+  @media screen and (max-width: 1100px) {
+    display: block;
+  }
+  @media screen and (max-width: 992px) {
+    right: 1em;
+  }
+  &:focus {
+    outline: none;
+  }
 }
 
 .header_form {
   display: flex;
   margin: 1.3em 0;
   width: 100%;
+  min-height: 71px;
+
+  @media screen and (max-width: 750px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  @media screen and (max-width: 750px) {
+    .city_loader,
+    small {
+      order: 4;
+    }
+  }
 
   .input_holder {
     position: relative;
     width: 100%;
-    svg {
-      font-size: 1.8em;
+    &:before {
+      content: "\26B2";
+      font-size: 2em;
+      color: #1e1f1e;
+      transform: translateY(-50%) rotate(-45deg);
+      display: inline-block;
       position: absolute;
+      left: 1em;
       top: 50%;
-      left: 0;
-      transform: translate(100%, -50%);
-      color: #3a3f46;
+      z-index: 2;
     }
+    //svg {
+    //  font-size: 1.8em;
+    //  position: absolute;
+    //  top: 50%;
+    //  left: 0;
+    //  transform: translate(100%, -50%);
+    //  color: #3a3f46;
+    //}
     .search_input {
+      border: none;
       border-radius: 0 0 0 1.5em;
       background-color: #ffffff;
       padding: 0.95em 1em 0.95em 4em;
@@ -42,43 +93,75 @@
       font-family: "Montserrat", sans-serif;
       font-size: 21px;
       width: 100%;
+      transition: 0.3s;
       &::placeholder {
         color: #3a3f46;
       }
       &:focus {
+        transition: 0.3s;
         outline: none;
+      }
+      @media screen and (min-width: 751px) {
+        &:focus {
+          transition: 0.3s;
+          outline: none;
+          position: absolute;
+          min-width: 20em;
+          max-width: 90vw;
+          z-index: 1;
+        }
+      }
+    }
+    @media screen and (max-width: 750px) {
+      order: 1;
+      grid-column: span 3;
+    }
+    @media screen and (max-width: 550px) {
+      grid-column: span 4;
+      .search_input {
+        border-radius: 1.5em 0 0 0;
       }
     }
   }
   .select_holder {
     position: relative;
     background-color: #3a3f46;
-    padding-left: 5rem;
-    &:hover {
-      background-color: #222529;
-      span {
-        transform: translate(.9em, -50%) rotate(90deg);
+    padding-left: 2rem;
+    min-width: 14em;
+    overflow: hidden;
+    transition: .3s;
+    @media screen and (min-width: 751px) {
+      &:hover {
+        background-color: #222529;
+        span {
+          transform: translate(0.9em, -50%) rotate(90deg);
+        }
       }
     }
-    span {
+    @media screen and (max-width: 550px) {
+      padding-left: 2em;
+    }
+      span {
       position: absolute;
       top: 50%;
       left: 0;
-      transform: translate(.9em, -50%);
+      transition: .3s;
+      transform: translate(0.9em, -50%);
       user-select: none;
       color: #fff;
       font-size: 1.5em;
       cursor: pointer;
-      transition: .3s;
+      transition: 0.3s;
       //z-index: -1;
     }
     .search_select {
       //z-index: 1;
+      transition: .3s;
       user-select: none;
-      max-width: 12em;
+      max-width: 10em;
       cursor: pointer;
       appearance: none;
-      padding: .5em 1em;
+      padding: 0.5em 1em;
       -webkit-appearance: none;
       -moz-appearance: none;
       background: none;
@@ -90,11 +173,21 @@
       font-weight: 700;
       transition: 1s;
       animation: growing 1s ease-in;
+      position: relative;
       option {
         background-color: #3a3f46;
       }
       &:focus {
         outline: none;
+      }
+
+    }
+    @media screen and (max-width: 750px) {
+      order: 3;
+      grid-column: span 4;
+      margin-top: 1em;
+      .search_select {
+        max-width: none;
       }
     }
   }
@@ -106,36 +199,11 @@
       width: 100%;
     }
   }
-  //.search_select_city {
-  //  select {
-  //    background-color: #3a3f46;
-  //    appearance: none;
-  //    padding: .5em 1em;
-  //    -webkit-appearance: none;
-  //    -moz-appearance: none;
-  //    border: none;
-  //    max-width: 10em;
-  //    color: #ffffff;
-  //    font-family: "Montserrat", sans-serif;
-  //    font-size: 21px;
-  //    font-weight: 700;
-  //    display: inline-block;
-  //    transition: .3s;
-  //    option {
-  //      background-color: #3a3f46;
-  //    }
-  //    &:focus {
-  //      outline: none;
-  //    }
-  //    &:hover {
-  //      background-color: #222529;
-  //    }
-  //  }
-  //}
   .search_btn {
     border-radius: 0 1.5em 0 0;
     border: none;
     background-color: #3a3f46;
+    padding: 0 1em;
     width: 13em;
     color: #c78550;
     text-align: center;
@@ -143,9 +211,9 @@
     font-size: 21px;
     font-weight: 700;
     position: relative;
-    transition: .3s;
+    transition: 0.3s;
     &:before {
-      content: '';
+      content: "";
       position: absolute;
       width: 3px;
       height: 2em;
@@ -155,7 +223,7 @@
       transform: translateY(-50%);
       background-color: #fff;
       display: block;
-      transition: .3s;
+      transition: 0.3s;
     }
     &:focus {
       outline: none;
@@ -165,6 +233,19 @@
       &:before {
         height: 100%;
       }
+    }
+    @media screen and (max-width: 750px) {
+      order: 2;
+      width: 7em;
+      &:before {
+        display: none;
+      }
+    }
+    @media screen and (max-width: 550px) {
+      grid-column: span 4;
+      border-radius: 0 0 1.5em 0;
+      width: 100%;
+      padding: .8em;
     }
   }
 }
@@ -203,6 +284,10 @@
       color: #f5c99e;
     }
   }
+  @media screen and (max-width: 768px) {
+    padding: 0.7em 0;
+    text-align: center;
+  }
 }
 .nav_item_double {
   flex-basis: 37%;
@@ -214,6 +299,9 @@
   a:last-child {
     padding-left: 1em;
   }
+  @media screen and (max-width: 768px) {
+    justify-content: center;
+  }
 }
 
 /* Tooltip container */
@@ -224,7 +312,7 @@
 
 /* Tooltip text */
 .tooltip .tooltiptext {
-  transition: .3s;
+  transition: 0.3s;
   visibility: hidden;
   //width: 120px;
   background-color: #444;
@@ -233,7 +321,7 @@
   padding: 5px 0;
   border-radius: 6px;
   font-size: 1em;
-  padding: .3em 1em;
+  padding: 0.3em 1em;
 
   /* Position the tooltip text - see examples below! */
   position: absolute;
