--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -10,30 +10,15 @@
 	grid-row-gap: 1.5rem;
 	padding: 10rem 1rem;
 	position: relative;
-	@media screen and (max-width: 1024px) {
+	@media screen and (max-width: 1100px) {
 		grid-template-columns: 1fr;
 		grid-template-rows: min-content;
+		padding-top: 0;
 	}
 	main {
 		overflow: auto;
 		border-radius: 1em;
-		background: linear-gradient(to right, #383d43, #31353b);
-	}
-}
-
-.sidebar_toggler {
-	position: absolute;
-	top: 1rem;
-	left: 1em;
-	z-index: 99;
-	border-radius: 0.3em;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	padding: 0.5em 0.6em;
-	color: #6f6f6f;
-	font-weight: 600;
-	display: none;
-	@media screen and (max-width: 1024px) {
-		display: block;
+		//background: linear-gradient(to right, #383d43, #31353b);
 	}
 }
 
