--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -8,7 +8,7 @@
   padding: 3rem 9%;
   overflow: hidden;
 
-  @media screen and (max-width: 1024px) {
+  @media screen and (max-width: 1100px) {
     display: none;
   }
 }
@@ -16,6 +16,7 @@
 .sidebar_logo {
   display: flex;
   justify-content: flex-end;
+  padding-bottom: .5em;
   a {
     width: 70%;
     max-width: 90%;
@@ -45,18 +46,33 @@
   align-items: center;
   position: relative;
   img {
-    //position: absolute;
-    //top: 50%;
-    //left: 50%;
-    //transform: translate(-50%, -50%);
     height: 8em;
     width: 8.1em;
-    //overflow: hidden;
     border-radius: 50%;
+  }
+  @media screen and (max-width: 1550px) {
+    width: 8.1em;
+    height: 8em;
+    img {
+      height: 6em;
+      width: 6.1em;
+    }
+  }
+  @media screen and (max-width: 1100px) {
+    margin: 0;
+    width: 30vw;
+    height: 30vw;
+    padding: 0;
+    img {
+      height: 25vw;
+      width: 25vw;
+    }
   }
 }
 .user_info {
+  display: grid;
   .username {
+    text-align: center;
     color: #ffffff;
     font-family: "Montserrat", sans-serif;
     font-size: 32px;
@@ -67,16 +83,22 @@
     span {
       color: #fff;
       font-size: 2.1em;
+      @media screen and (max-width: 1250px) {
+        font-size: 1.5em;
+      }
     }
   }
 }
 
 .sidebar_component {
   background: linear-gradient(-37deg, #1e1f1e 0%, #383b42 100%);
-  //min-height: 80vh;
+  min-height: 100vh;
   height: 100%;
   display: grid;
   margin-top: -5rem;
   padding: 1em;
   border-radius: 0 0 1em 1em;
+  @media screen and (max-width: 1550px) {
+    margin-top: -3rem;
+  }
 }
