--- a/src/pages/styles/global.scss
+++ b/src/pages/styles/global.scss
@@ -4,4 +4,5 @@ body {
   display: block;
   box-shadow: 0 41px 41px 8px rgba(29, 38, 49, 0.42);
   background: linear-gradient(-225deg, #3a3f46 0%, #212429 99%, #212429 100%) !important;
+  font-family: 'Montserrat', sans-serif;
 }
