--- a/src/components/desire/desire.module.scss
+++ b/src/components/desire/desire.module.scss
@@ -1,94 +1,146 @@
 .desire_page {
+	.desire_view {
+		display: grid;
+		grid-template-columns: 3fr 1fr;
+		gap: 1.5em;
+	}
 }
 .card {
 	display: grid;
-	background-color: #fff;
+	gap: 1.5em;
+	border-radius: 1em;
+	background: linear-gradient(to bottom, #373b42, #2e3137);
+	padding: 3rem 6%;
+	grid-template-columns: 3fr 1fr;
 }
 .main_image {
+	grid-column: span 2;
 	width: 100%;
-	height: 24em;
-	background-color: #0c9bb5;
-	display: grid;
-	//justify-items:  center;
-	//align-items: center;
+	height: 27em;
+	border-radius: 1em;
 	overflow: hidden;
 	position: relative;
 	img {
-		//width: 100%;
+		width: 100%;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 	}
 }
 .card_info {
+	padding: 2em 5%;
+	border-radius: 1em;
+	color: #fff;
+	background-color: #3a3f46;
 	display: grid;
-	grid-template-columns: 3fr 1fr;
-	grid-gap: 1em;
-	padding: 1em;
-	@media screen and (max-width: 767px) {
-		grid-template-columns: 1fr;
+	.card_info_header {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding-bottom: 1em;
 	}
-}
-.card_control {
-	display: flex;
-	justify-content: flex-end;
-}
-.created_at {
-	font-size: 1.5em;
-	font-weight: 500;
-	white-space: nowrap;
-}
-
-.views {
-	white-space: nowrap;
-	font-size: 1.5em;
-	font-weight: 500;
-}
-.categories {
-	font-size: 1em;
-	font-weight: 500;
-	display: grid;
-	grid-gap: 0.5em;
-	span {
-		text-align: center;
-		padding: 0.1em 0.5em;
-		border: 1px solid #000;
-	}
-}
-.add_offer_btn {
-	text-decoration: none;
-	color: #000000;
-	text-align: center;
-	padding: 0.3em 0.5em;
-	margin-top: 1em;
-	border: 1px solid #000;
-	white-space: nowrap;
-	display: block;
-	width: 100%;
-}
-
-.desire_view {
-	display: grid;
-	grid-template-columns: 3fr 1fr;
-	grid-column-gap: 1em;
-	@media screen and (max-width: 767px) {
-		grid-template-columns: 1fr;
-	}
-}
-.show_offers {
-	background-color: #555;
-	grid-column: span 2;
-	span {
-		padding: 0.2em 1em;
-		margin: -1px 0 0 1em;
-		color: #fff;
-		background-color: #8fb50c;
-		font-weight: 500;
-		height: calc(100% + 1px);
-		&:hover {
-			transition: 0.2s;
-			color: #fff;
-			background-color: #5db900;
+	.price {
+		font-size: 34px;
+		font-weight: 700;
+		span {
+			font-size: 24px;
 		}
 	}
-	@media screen and (max-width: 767px) {
-		grid-column: span 1;
+	h3 {
+		font-size: 17px;
+		font-weight: 700;
+	}
+	p {
+		font-size: 17px;
+		font-weight: 400;
+		min-height: 8em;
+	}
+	.date {
+		font-size: 20px;
+		font-weight: 700;
+	}
+}
+
+.toast_parrent {
+	position: relative;
+	.active_toast_btn {
+		font-size: 2.5em;
+		line-height: 1em;
+		display: inline-block;
+		transform: translateY(.1em);
+	}
+}
+.toast {
+	display: grid;
+	position: absolute;
+	border-radius: .2em;
+	top: 50%;
+	right: 3em;
+	background-color: #2e3137;
+	transform: translate(0, -50%);
+	span {
+		color: #ffffff;
+		font-weight: 600;
+		padding: .5em 1.5em;
+		transition: .3s;
+		&:hover {
+			background-color: #3a3f46;
+		}
+	}
+}
+
+.card_control {
+	border-radius: 1em;
+	background-color: #3a3f46;
+	padding: 1.5em;
+	display: grid;
+	gap: .8em;
+	p {
+		text-align: center;
+		white-space: nowrap;
+		color: #4cb26b;
+		font-size: 21px;
+		font-weight: 900;
+		text-transform: uppercase;
+		margin: 0;
+	}
+	.com, .fav {
+		cursor: pointer;
+		img {
+			width: 1.5em;
+			margin-right: 1em;
+		}
+		span {
+			font-size: 15px;
+			color: #fff;
+			font-weight: 700;
+		}
+	}
+	.views {
+		svg {
+			font-size: 1.5em;
+			color: #fff;
+			margin-right: .7em;
+		}
+		span {
+			color: #fff;
+			font-size: 16px;
+			font-weight: 700;
+		}
+	}
+	.categories {
+		margin-top: 2em;
+		display: grid;
+		gap: .5em;
+		span {
+			padding: .4em;
+			color: #fff;
+			text-align: center;
+			border-radius: 1em;
+			background-color: #22262a;
+			font-size: 15px;
+			font-weight: 700;
+		}
 	}
 }
