--- a/src/components/main-list/offers-list.module.scss
+++ b/src/components/main-list/offers-list.module.scss
@@ -22,6 +22,12 @@
     grid-template-columns: 24% 24% 24% 24%;
     grid-column-gap: 1.3%;
     grid-row-gap: 2em;
+    @media screen and (max-width: 1850px) {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+    @media screen and (max-width: 1550px) {
+      grid-template-columns: 1fr 1fr;
+    }
     @media screen and (max-width: 768px) {
       grid-template-columns: 1fr;
     }
@@ -109,7 +115,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     //width: auto;
-    height: 100%;
+    width: 100%;
   }
 }
 .card_info {
