--- a/src/components/my-desires/offers-for-me.module.scss
+++ b/src/components/my-desires/offers-for-me.module.scss
@@ -43,12 +43,19 @@
       }
     }
   }
+  @media screen and (max-width: 1700px) {
+    display: grid;
+    gap: 1em;
+  }
 }
 
 .offers_list {
   background: linear-gradient(to right, #373b42, #2e3137);
   grid-column: span 3;
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1550px) {
+    grid-column: span 2;
+  }
+  @media screen and (max-width: 750px) {
     grid-column: span 1;
   }
 }
@@ -66,11 +73,16 @@
 
 .card {
   border-radius: 1em;
-  background-color: #3a3f46;
   color: #383b42;
   display: grid;
   grid-template-columns: 38% 42% 20%;
   overflow: hidden;
+  @media screen and (max-width: 1550px) {
+    grid-template-columns: 2fr 1fr;
+  }
+  @media screen and (max-width: 750px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .card_image {
@@ -94,6 +106,14 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+  @media screen and (max-width: 1550px) {
+    grid-column: span 2;
+    grid-row: span 1;
+    margin-bottom: 1em;
+  }
+  @media screen and (max-width: 750px) {
+    grid-column: span 1;
+  }
 }
 
 .card_info_block {
@@ -102,6 +122,8 @@
   color: #ffffff;
   display: grid;
   align-content: space-between;
+  background-color: #3a3f46;
+
   h5 a {
     color: #ffffff;
     font-family: "Montserrat", sans-serif;
@@ -110,21 +132,12 @@
     font-weight: 700;
   }
   p {
-    height: 7em;
+    min-height: 7em;
     overflow: hidden;
     position: relative;
     font-size: 17px;
     font-weight: 400;
     line-height: 1.4em;
-    &:after {
-      content: "";
-      background: linear-gradient(to top, #3a3f46, transparent);
-      width: 100%;
-      height: 3em;
-      display: block;
-      position: absolute;
-      bottom: -2px;
-    }
   }
   .user_block {
     display: grid;
@@ -159,6 +172,9 @@
         margin-right: 0.5em;
       }
     }
+  }
+  @media screen and (max-width: 1550px) {
+    background: none;
   }
 }
 
@@ -226,6 +242,9 @@
       }
     }
   }
+  @media screen and (max-width: 750px) {
+    margin-top: 1em;
+  }
 }
 
 .disableColor {
@@ -233,8 +252,14 @@
 }
 
 .card_footer {
+  padding-bottom: .3em;
   grid-column: span 2;
-  background-color: #31343a;
+  @media screen and (max-width: 1550px) {
+    margin-top: .7em;
+  }
+  @media screen and (max-width: 750px) {
+    grid-column: span 1;
+  }
 }
 .not_published {
   height: calc(100% - 7px);
