--- a/src/components/sidebar/mob-sidebar.module.scss
+++ b/src/components/sidebar/mob-sidebar.module.scss
@@ -2,14 +2,14 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  top: 5rem;
+  top: 0;
   background-color: #383d43;
-  box-shadow: 5px 5px 25px 3px #999;
+  box-shadow: 5px 5px 25px 3px #222;
   padding: 1em;
   z-index: 999;
   display: none;
-  max-width: 100vw;
-  width: 22em;
+  width: 90vw;
+  //width: 22em;
   height: 100%;
 }
 
@@ -19,7 +19,7 @@
   z-index: 999;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
   .sidebar,
   .sidebar_toggler {
     display: block;
@@ -64,5 +64,22 @@
   font-weight: 500;
   img {
     margin-right: 0.6em;
+  }
+}
+
+.sidebar_logo {
+  display: flex;
+  justify-content: space-between;
+  a {
+    width: 70%;
+    max-width: 90%;
+  }
+  img {
+    width: 100%;
+  }
+  .switch_sidebar {
+    padding: .5em;
+    font-size: 2.5em;
+    color: #ffffff;
   }
 }
