--- a/src/components/desire/desire.module.scss
+++ b/src/components/desire/desire.module.scss
@@ -9,7 +9,7 @@
 	display: grid;
 	gap: 1.5em;
 	border-radius: 1em;
-	background: linear-gradient(to bottom, #373b42, #2e3137);
+	background: linear-gradient(75deg, #373b42, #363a40);
 	padding: 3rem 6%;
 	grid-template-columns: 3fr 1fr;
 }
