--- a/src/components/interesting-lots/interesting-lots.module.scss
+++ b/src/components/interesting-lots/interesting-lots.module.scss
@@ -1,7 +1,9 @@
 .interesting_lots_list {
-	background-color: #b9b8b8;
+	background-color: #3a3f46;
 	padding: 2.5em 1.5em 1em 1.5em;
 	grid-column: span 3;
+	margin-top: 1em;
+	border-radius: 1em;
 	ul {
 		position: relative;
 		list-style: none;
@@ -44,12 +46,13 @@
 .card_header_control {
 	width: 100%;
 	position: absolute;
-	top: 0.5em;
+	top: 0;
 	left: 0;
 	display: flex;
 	align-items: center;
 	align-content: center;
 	justify-content: space-between;
+	background-color: #2e3137;
 	span {
 		cursor: pointer;
 		padding: 0.5em 1em;
@@ -136,8 +139,9 @@
 		padding: 0.3em 1em;
 		font-weight: 700;
 		display: inline-block;
-		background-color: #dedede;
-		color: #000;
+		background-color: #22262a;
+		color: #fff;
+		border-radius: .2em;
 	}
 	@media screen and (max-width: 768px) {
 		grid-template-columns: 1fr;
