--- a/src/components/my-desires/my-desire.module.scss
+++ b/src/components/my-desires/my-desire.module.scss
@@ -121,11 +121,11 @@
   }
 
   img {
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    //width: 100%;
+    //position: absolute;
+    //top: 50%;
+    //left: 50%;
+    //transform: translate(-50%, -50%);
   }
   .placeholder {
     width: 100%;
