--- a/src/components/my-desires/offers-for-me.module.scss
+++ b/src/components/my-desires/offers-for-me.module.scss
@@ -93,11 +93,11 @@
   border-radius: 1em;
 
   img {
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    //width: 100%;
+    //position: absolute;
+    //top: 50%;
+    //left: 50%;
+    //transform: translate(-50%, -50%);
   }
   .placeholder {
     width: 100%;
@@ -286,12 +286,13 @@
   justify-content: space-between;
   align-items: center;
   color: #ffffff;
-  div {
+  .card_footer_item {
     font-size: 15px;
     font-weight: 700;
     cursor: pointer;
     transition: .3s;
     user-select: none;
+    padding: .4em;
     img {
       height: 1.5em;
       margin-right: 1em;
